--- a/css/main.scss
+++ b/css/main.scss
@@ -8,17 +8,15 @@ $red: #e35028;
 @import "_misc/normalize.scss";
 
 // setups
-@import "_misc/mixins";
-@import "_misc/fonts";
-@import "_misc/layout";
+@import "_misc/fonts",
+        "_misc/layout";
 
 
 //common
 @import "blocks/common/btn.scss";
 
 // blocks
-@import "blocks/hero.scss";
-@import "blocks/best.scss";
-@import "blocks/team.scss";
-@import "blocks/reviews.scss";
-@import "blocks/order.scss";
+@import "blocks/hero.scss",
+        "blocks/best.scss",
+        "blocks/header.scss",
+        "blocks/reviews.scss";
