--- a/css/_misc/layout.scss
+++ b/css/_misc/layout.scss
@@ -13,21 +13,21 @@ body {
   color: $black;
 }
 
-.container {
-  margin: 0 auto;
-  position: relative;
-  width: 940px;
-  // width: 95%;
-  display: flex;
-  flex-direction: column;
+.wrapper {
+  overflow: hidden;
+  width: 100%;
+  min-width: 940px;
+  min-height: 100%;
 }
 
-.wrapper {
-  position: relative;
-  width: 100%;
-  min-width: 940px + 20px;
-  min-height: 100%;
-  overflow: hidden;
+.container {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.section {
+  height: 100vh;
+  min-height: 650px;
 }
 
 
@@ -67,34 +67,4 @@ footer {
 
 * {
   box-sizing: border-box;
-}
-
-.section {
-  min-height: 650px;
-
-  &_centered {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-
-.section-title {
-  font-size: 72px;
-  @include gagalin();
-  color: $yellow;
-  margin-bottom: 40px;
-
-  &_color {
-    &_black {
-      color: $black;
-    }
-
-  }
-
-  &_position {
-    &_center {
-      text-align: center;
-    }
-  }
 }
