--- a/css/blocks/common/btn.scss
+++ b/css/blocks/common/btn.scss
@@ -1,8 +1,10 @@
 .btn {
-  padding: 10px 15px;
+  padding: 8px 15px;
   background: $red;
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
   display: inline-block;
+  text-transform: uppercase;
+  font-size: 13px;
 }
