--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -1,5 +1,5 @@
 .best {
-  background: url('../img/bg/best.jpg') center center no-repeat;
+  background: url('../images/best_bg.png') center center no-repeat;
   background-size: cover;
 }
 
@@ -14,4 +14,3 @@
     margin-right: 0;
   }
 }
-
