--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -1,11 +1,6 @@
 .section-title {
-  @include gagalin();
   font-size: 72px;
   color: $yellow;
-  margin-bottom: 25px;
-
-  &_color_black {
-    color: $black;
-  }
+  font-family: 'Gagalin-Regular';
+  line-height: 1.1;
 }
-
