--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -20,3 +20,15 @@
 .best__icon {
   display: inline-block;
 }
+
+.best__content-title {
+  @include lifehack()
+
+  font-size: 24px;
+}
+
+.best__content-text {
+  @include ubuntu($style: light);
+
+  font-size: 14px;
+}
