--- a/css/blocks/common/btn.scss
+++ b/css/blocks/common/btn.scss
@@ -1,4 +1,6 @@
 .btn {
+  @include ubuntu($style: medium);
+
   padding: 8px 15px;
   background: $red;
   color: #fff;
@@ -7,6 +9,7 @@
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
+
 
   &_background_black {
     background: #000;
