--- a/css/blocks/common/fixed-menu.scss
+++ b/css/blocks/common/fixed-menu.scss
@@ -7,7 +7,7 @@
 .fixed-menu__item {
   margin-bottom: 10px;
 
-  &.active {
+  &_active {
     .fixed-menu__link {
       border-color: #fff;
     }
