--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -1,7 +1,12 @@
 .section-title {
+  @include gagalin()
+
   font-size: 72px;
   color: $yellow;
-  font-family: 'Gagalin-Regular';
   line-height: 1.1;
   margin-bottom: 50px;
+
+  &_black {
+    color: $black;
+  }
 }
