--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -15,9 +15,12 @@
 }
 
 .menu__item {
+  @include ubuntu($style: medium);
+
   display: flex;
   align-items: center;
   text-decoration: none;
+  text-transform: uppercase;
 
   &:last-child {
     &:after {
