--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -28,3 +28,18 @@
   color: #fff;
   font-size: 64px;
 }
+
+.arrow-down {
+  width: 35px;
+  height: 25px;
+  position: absolute;
+  bottom: 35px;
+  left: 48%;
+}
+
+.arrow-down__link {
+  background: url('../images/icons/arrow-scroll.svg') center center no-repeat;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
