--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -5,16 +5,24 @@
 
 .best__list {
   display: flex;
+  margin-bottom: 50px;
 }
 
 .best__item {
   flex: 1;
   margin-right: 15px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   &:last-child {
     margin-right: 0;
   }
+}
+
+.best__image {
+  margin-bottom: 20px;
 }
 
 .best__icon {
@@ -25,10 +33,13 @@
   @include lifehack()
 
   font-size: 24px;
+  line-height: 28px;
+  margin-bottom: 15px;
 }
 
 .best__content-text {
   @include ubuntu($style: light);
 
   font-size: 14px;
+  line-height: 20px;
 }
