--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 7px;
 }
 
 .header__buttons {
@@ -32,7 +33,7 @@
     width: 6px;
     height: 6px;
     border-radius: 50%;
-    margin: 0 10px;
+    margin: 0 14.5px;
     display: inline-block;
     background: #fff;
   }
@@ -41,4 +42,5 @@
 .menu__link {
   color: #fff;
   text-decoration: none;
+  font-size: 13px;
 }
