--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -19,7 +19,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 0.7;
+  flex: 0.73;
+  margin-left: 50px;
+}
+
+.hero__content-image {
+  background: url('../images/hero_burger_drops.png') center 35% no-repeat;
 }
 
 .hero__content-text {
@@ -27,6 +32,12 @@
 
   color: #fff;
   font-size: 64px;
+  line-height: 60px;
+}
+
+.hero__content-description {
+  margin-left: 12px;
+  margin-top: 65px;
 }
 
 .arrow-down {
