--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -36,16 +36,21 @@
   right: 0;
   bottom: 0;
   background: rgba(#000, .5);
-  padding: 10px;
+  padding: 25px;
+  padding-left: 15px;
   color: #fff;
   opacity: 0;
   transition: opacity .3s;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
 
 .reviews__title {
   @include gagalin;
   font-size: 14px;
-  line-height: 28.11px;
 }
 
 .reviews__text {
