--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -5,6 +5,7 @@
 
 .best__list {
   display: flex;
+  align-items: baseline;
   margin-bottom: 50px;
 }
 
@@ -14,7 +15,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
 
   &:last-child {
     margin-right: 0;
@@ -33,7 +34,6 @@
   @include lifehack()
 
   font-size: 24px;
-  line-height: 28px;
   margin-bottom: 15px;
 }
 
