--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -3,6 +3,15 @@
   background-size: cover;
 }
 
+.order__content {
+  display: flex;
+
+}
+
+.form {
+  width: 50%;
+}
+
 .form__row {
   display: flex;
 }
@@ -14,6 +23,10 @@
   &:last-child {
     margin-right: 0;
   }
+}
+
+.form__block-title {
+  color: #fff;
 }
 
 .form__block-input {
