--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -25,8 +25,10 @@
   }
 }
 
-.form__block-title {
-  color: #fff;
+.form__block-title, .form-controlls__btn-title {
+  @include ubuntu($style: light)
+  font-size: 14px;
+  color: #e2e2e2;
 }
 
 .form__block-input {
@@ -93,8 +95,4 @@
     width: 8px;
     height: 8px;
   }
-}
-
-.form-controlls__btn-title {
-  color: #fff;
 }
