--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -4,14 +4,20 @@
 
   &__content {
     display: flex;
+    justify-content: space-between;
   }
 }
 
 .form {
-  width: 50%;
+  width: 49%;
 
   &__row {
     display: flex;
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
   &__block {
     flex: 1;
@@ -20,6 +26,9 @@
     &:last-child {
       margin-right: 0;
     }
+  }
+  &__clear {
+    margin-left: 20px;
   }
 }
 
@@ -37,7 +46,7 @@
   border: none;
   outline: none;
   width: 100%;
-  padding: 5px 10px;
+  padding: 9px 10px;
 
   &:focus {
     width: 100%;
@@ -46,8 +55,19 @@
   }
 }
 
+.form__block-input_comment {
+  height: 101px;
+
+}
+
 .form-controlls {
   display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+
+  &:last-child {
+    margin-bottom: 20px;  // не работает почему-то
+  }
 
   &__radio {
     display: none;
@@ -68,8 +88,8 @@
 }
 
 .form-controlls__fake-radio {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
   border: 1px solid #c9c9c9;
   background-image: linear-gradient(to top, #ededed, #ffffff);
@@ -91,8 +111,8 @@
 }
 
 .form-controlls__fake-checkbox {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   border: 1px solid #c9c9c9;
   background-image: linear-gradient(to top, #ededed, #ffffff);
   position: relative;
@@ -114,4 +134,9 @@
 .form-controlls__radio:checked~.form-controlls__fake-radio:after {
   width: 8px;
   height: 8px;
+}
+
+.form__confirm {
+  display: flex;
+  align-items: center;
 }
