--- a/css/blocks/common/fixed-menu.scss
+++ b/css/blocks/common/fixed-menu.scss
@@ -7,6 +7,9 @@
 .fixed-menu__item {
   margin-bottom: 5px;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
   &_active {
     .fixed-menu__link {
       border-color: #fff;
