--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -9,8 +9,14 @@
 }
 
 .form {
-  width: 49%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
+  &__container {
+    width: 49%;
+  }
   &__row {
     display: flex;
     margin-bottom: 20px;
