--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -68,9 +68,8 @@
   margin-bottom: 30px;
 
   &:last-child {
-    margin-bottom: 20px;  // не работает почему-то
+    margin-bottom: 20px;
   }
-
   &__radio {
     display: none;
   }
