--- a/css/_misc/layout.scss
+++ b/css/_misc/layout.scss
@@ -81,3 +81,10 @@ footer {
 * {
   box-sizing: border-box;
 }
+
+// hide input type=number arrows
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
