--- a/css/_misc/layout.scss
+++ b/css/_misc/layout.scss
@@ -85,6 +85,8 @@ footer {
 // hide input type=number arrows
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
