--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -39,16 +39,15 @@
     overflow: hidden;
   }
   &__avatar {
-    width: 135px;
+    width: 60%;
     height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-left: 17px;
   }
   &__avatar-img {
-    border-radius: 100%;
+    border-radius: 50%;
     width: 100%;
     height: 100%;
+    vertical-align: middle;
   }
   &__description {
     margin-left: 20px;
@@ -65,7 +64,7 @@
   border-left-width: 5px;
   border-right-width: 5px;
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 8px;
 }
 
 .accordeon__item_active .accordeon__content {
