--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ $grey: #313436;
 @import "blocks/hero.scss",
         "blocks/best.scss",
         "blocks/header.scss",
-        "blocks/roster.scss",
+        "blocks/menu.scss",
         "blocks/order.scss",
         "blocks/reviews.scss",
         "blocks/team.scss";
