--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -21,7 +21,7 @@
   }
 }
 
-.accordeon {
+.team-accordeon {
 
   &__item {
     margin-bottom: 35px;
@@ -54,7 +54,7 @@
   }
 }
 
-.accordeon__title:before {
+.team-accordeon__title:before {
   content: '';
   border: 5px solid transparent;
   width: 0;
@@ -67,13 +67,13 @@
   margin-right: 8px;
 }
 
-.accordeon__item_active .accordeon__content {
+.team-accordeon__item_active .team-accordeon__content {
   height: 100%;
 }
-.accordeon__item_active .accordeon__title {
+.team-accordeon__item_active .team-accordeon__title {
   color: $yellow;
 }
-.accordeon__item_active .accordeon__title::before {
+.team-accordeon__item_active .team-accordeon__title::before {
   content: '';
   border: 5px solid transparent;
   width: 0;
@@ -85,21 +85,21 @@
   display: inline-block;
 }
 
-.accordeon__title {
+.team-accordeon__title {
   @include gagalin();
 }
 
-.accordeon__description-title {
+.team-accordeon__description-title {
   @include ubuntu($style: bold);
 
   margin-bottom: 20px;
 }
 
-.accordeon__description-text {
+.team-accordeon__description-text {
   @include ubuntu($style: light);
 }
 
-.accordeon__title, .accordeon__description-title, .accordeon__description-text {
+.team-accordeon__title, .team-accordeon__description-title, .team-accordeon__description-text {
   font-size: 14px;
   color: #ffffff;
 }
