--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -5,6 +5,11 @@
   margin-top: 7px;
 }
 
+.header__logo-icon {
+  width: 92px;
+  height: 70px;
+}
+
 .header__buttons {
   display: flex;
   align-items: center;
