--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -37,16 +37,20 @@
 }
 
 .arrow-down {
-  width: 35px;
-  height: 25px;
+  width: 30px;
+  height: 15px;
   position: absolute;
-  bottom: 35px;
-  left: 48%;
+  bottom: 38px;
+  left: 48.45%;
 }
 
 .arrow-down__link {
-  background: url('../images/icons/arrow-scroll.svg') center center no-repeat;
   display: block;
   width: 100%;
   height: 100%;
+}
+
+.arrow-down__icon {
+  width: inherit;
+  height: inherit;
 }
