--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -39,15 +39,16 @@
     overflow: hidden;
   }
   &__avatar {
-    width: 60%;
+    width: 28.5%;
     height: 100px;
     margin-left: 17px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    overflow: hidden;
   }
   &__avatar-img {
-    border-radius: 50%;
     width: 100%;
     height: 100%;
-    vertical-align: middle;
   }
   &__description {
     margin-left: 20px;
