--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,9 @@ $grey: #313436;
 // blocks
 @import "blocks/hero.scss",
         "blocks/best.scss",
+        "blocks/footer.scss",
         "blocks/header.scss",
+        "blocks/map.scss",
         "blocks/menu.scss",
         "blocks/order.scss",
         "blocks/reviews.scss",
