--- a/css/blocks/map.scss
+++ b/css/blocks/map.scss
@@ -1,4 +1,4 @@
 .map {
-  background: url(../images/map_bg.png) center center / cover no-repeat;
+  background: url('../images/map_bg.png') center center / cover no-repeat;
   position: relative;
 }
