--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -15,6 +15,12 @@
   align-items: center;
 }
 
+.header__links {
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+}
+
 .nav__list {
   display: flex;
   align-items: center;
