--- a/css/main.scss
+++ b/css/main.scss
@@ -1,19 +1,24 @@
-//colors
+// colors
 $orange: #e45028;
 $yellow: #f9b43b;
 $black: #2f3234;
 $red: #e35028;
 $grey: #313436;
 
-//normalize
+// breakpoints
+$tablets: 768px;
+$phones: 480px;
+
+// normalize
 @import "_misc/normalize.scss";
 
 // setups
 @import "_misc/fonts",
+        "_misc/media",
         "_misc/layout";
 
 
-//common
+// common
 @import "blocks/common/btn.scss",
         "blocks/common/fixed-menu.scss",
         "blocks/common/section-title.scss";
@@ -27,4 +32,5 @@ $grey: #313436;
         "blocks/menu.scss",
         "blocks/order.scss",
         "blocks/reviews.scss",
-        "blocks/team.scss";
+        "blocks/team.scss",
+        "blocks/hamburger-menu-link.scss";
