--- a/css/blocks/common/fixed-menu.scss
+++ b/css/blocks/common/fixed-menu.scss
@@ -1,11 +1,11 @@
 .fixed-menu {
   position: fixed;
-  top: 90px;
-  right: 50px;
+  top: rem(90px);
+  right: rem(50px);
 }
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: rem(5px);
 
   &:last-child {
     margin-bottom: 0;
@@ -18,12 +18,12 @@
 }
 
 .fixed-menu__link {
-  width: 16px;
-  height: 16px;
+  width: rem(16px);
+  height: rem(16px);
   border-radius: 50%;
   position: relative;
   display: block;
-  border: 1px solid transparent;
+  border: rem(1px) solid transparent;
 
   &:hover {
     border-color: #fff;
@@ -32,8 +32,8 @@
   &:before {
     content: "";
     display: block;
-    width: 6px;
-    height: 6px;
+    width: rem(6px);
+    height: rem(6px);
     border-radius: 50%;
     background: #fff;
     position: absolute;
