--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -1,10 +1,10 @@
 .section-title {
   @include gagalin()
 
-  font-size: 72px;
+  font-size: rem(72px);
   color: $yellow;
   line-height: 1.1;
-  margin-bottom: 50px;
+  margin-bottom: rem(50px);
 
   &_black {
     color: $black;
@@ -13,6 +13,6 @@
     color: #ffffff;
   }
   &_hero {
-    margin-bottom: 25px;
+    margin-bottom: rem(25px);
   }
 }
