--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -2,12 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 7px;
+  margin-top: rem(7px);
 }
 
 .header__logo-icon {
-  width: 92px;
-  height: 70px;
+  width: rem(92px);
+  height: rem(70px);
 }
 
 .header__buttons {
@@ -18,7 +18,7 @@
 .header__links {
   display: flex;
   align-items: center;
-  margin-left: 15px;
+  margin-left: rem(15px);
 }
 
 .nav__list {
@@ -41,10 +41,10 @@
   }
   &:after {
     content: '';
-    width: 6px;
-    height: 6px;
+    width: rem(6px);
+    height: rem(6px);
     border-radius: 50%;
-    margin: 0 14.5px;
+    margin: 0 rem(14.5px);
     display: inline-block;
     background: #fff;
   }
@@ -53,5 +53,5 @@
 .nav__link {
   color: #fff;
   text-decoration: none;
-  font-size: 13px;
+  font-size: rem(13px);
 }
