--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -13,30 +13,30 @@
   display: flex;
   align-items: center;
   flex: 0.73;
-  margin-left: 15px;
+  margin-left: rem(15px);
 }
 
 .hero__content-text {
   @include lifehack()
 
   color: #fff;
-  font-size: 64px;
-  line-height: 60px;
+  font-size: rem(64px);
+  line-height: rem(60px);
 }
 
 .hero__content-description {
   width: 50%;
-  margin-left: 12px;
-  margin-top: 65px;
+  margin-left: rem(12px);
+  margin-top: rem(65px);
   display: flex;
   flex-flow: column wrap;
 }
 
 .arrow-down {
-  width: 30px;
-  height: 15px;
+  width: rem(30px);
+  height: rem(15px);
   position: absolute;
-  bottom: 38px;
+  bottom: rem(38px);
   left: 48.45%;
 }
 
