--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -8,14 +8,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 10px 0 10px;
+  padding: 0 rem(10px) 0 rem(10px);
 
   &__container {
     width: 49%;
   }
   &__row {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
 
     &:last-child {
       margin-bottom: 0;
@@ -23,52 +23,52 @@
   }
   &__block {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
       margin-right: 0;
     }
   }
   &__clear {
-    margin-left: 20px;
+    margin-left: rem(20px);
   }
 }
 
 .form__block-title, .form-controlls__btn-title, .form__clear {
   @include ubuntu($style: light)
-  font-size: 14px;
+  font-size: rem(14px);
   color: #e2e2e2;
 }
 
 .form__block-input {
   @include ubuntu($style: light)
 
-  border-radius: 5px;
+  border-radius: rem(5px);
   background: #fff;
-  border: 2px solid #fff;
+  border: rem(2px) solid #fff;
   outline: none;
   width: 100%;
-  padding: 9px 10px;
+  padding: rem(9px) rem(10px);
 
   &:focus {
     width: 100%;
-    border: 2px solid $yellow;
+    border: rem(2px) solid $yellow;
     transition: .3s;
   }
 }
 
 .form__block-input_comment {
-  height: 101px;
+  height: rem(101px);
 
 }
 
 .form-controlls {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: rem(30px);
 
   &:last-child {
-    margin-bottom: 20px;
+    margin-bottom: rem(20px);
   }
   &__radio {
     display: none;
@@ -79,7 +79,7 @@
   &__btn {
     display: inline-flex;
     align-items: center;
-    margin-right: 20px;
+    margin-right: rem(20px);
     cursor: pointer;
 
     &:last-child {
@@ -89,18 +89,18 @@
 }
 
 .form-controlls__fake-radio {
-  width: 16px;
-  height: 16px;
+  width: rem(16px);
+  height: rem(16px);
   border-radius: 50%;
-  border: 1px solid #c9c9c9;
+  border: rem(1px) solid #c9c9c9;
   background-image: linear-gradient(to top, #ededed, #ffffff);
   position: relative;
-  margin-right: 10px;
+  margin-right: rem(10px);
 
   &:after {
     content: "";
-    width: 0px;
-    height: 0px;
+    width: 0;
+    height: 0;
     border-radius: 50%;
     background: $red;
     position: absolute;
@@ -112,17 +112,17 @@
 }
 
 .form-controlls__fake-checkbox {
-  width: 16px;
-  height: 16px;
-  border: 1px solid #c9c9c9;
+  width: rem(16px);
+  height: rem(16px);
+  border: rem(1px) solid #c9c9c9;
   background-image: linear-gradient(to top, #ededed, #ffffff);
   position: relative;
-  margin-right: 10px;
+  margin-right: rem(10px);
 
   &:after {
     content: "";
-    width: 0px;
-    height: 0px;
+    width: 0;
+    height: 0;
     background: $red;
     position: absolute;
     top: 50%;
@@ -133,8 +133,8 @@
 }
 
 .form-controlls__radio:checked~.form-controlls__fake-radio:after {
-  width: 8px;
-  height: 8px;
+  width: rem(8px);
+  height: rem(8px);
 }
 
 .form-controlls__checkbox:checked~.form-controlls__fake-checkbox:after {
