--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -24,14 +24,14 @@
 .team-accordeon {
 
   &__item {
-    margin-bottom: 35px;
+    margin-bottom: rem(35px);
     &:last-child {
       margin-bottom: 0;
 
     }
   }
   &__title {
-    margin-bottom: 15px;
+    margin-bottom: rem(15px);
   }
   &__content {
     display: flex;
@@ -40,8 +40,8 @@
   }
   &__avatar {
     width: 28.5%;
-    height: 100px;
-    margin-left: 17px;
+    height: rem(100px);
+    margin-left: rem(17px);
     flex-shrink: 0;
     border-radius: 50%;
     overflow: hidden;
@@ -51,21 +51,21 @@
     height: 100%;
   }
   &__description {
-    margin-left: 20px;
+    margin-left: rem(20px);
   }
 }
 
 .team-accordeon__title:before {
   content: '';
-  border: 5px solid transparent;
+  border: rem(5px) solid transparent;
   width: 0;
   height: 0;
   border-top-color: $yellow;
   border-bottom-width: 0;
-  border-left-width: 5px;
-  border-right-width: 5px;
+  border-left-width: rem(5px);
+  border-right-width: rem(5px);
   display: inline-block;
-  margin-right: 8px;
+  margin-right: rem(8px);
 }
 
 .team-accordeon__item_active .team-accordeon__content {
@@ -81,8 +81,8 @@
   height: 0;
   border-bottom-color: $yellow;
   border-top-width: 0;
-  border-left-width: 5px;
-  border-right-width: 5px;
+  border-left-width: rem(5px);
+  border-right-width: rem(5px);
   display: inline-block;
 }
 
@@ -93,7 +93,7 @@
 .team-accordeon__description-title {
   @include ubuntu($style: bold);
 
-  margin-bottom: 20px;
+  margin-bottom: rem(20px);
 }
 
 .team-accordeon__description-text {
@@ -101,6 +101,6 @@
 }
 
 .team-accordeon__title, .team-accordeon__description-title, .team-accordeon__description-text {
-  font-size: 14px;
+  font-size: rem(14px);
   color: #ffffff;
 }
