--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -32,6 +32,19 @@
   flex-flow: column wrap;
 }
 
+.hero__content-image {
+  width: 50%;
+}
+
+.hero__burger-img {
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .arrow-down {
   width: rem(30px);
   height: rem(15px);
