--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -10,8 +10,20 @@
   justify-content: space-between;
   padding: 0 rem(10px) 0 rem(10px);
 
+  @include tablets() {
+    flex-direction: column;
+    align-items: center;
+  }
+
   &__container {
     width: 49%;
+
+    @include tablets() {
+      width: 58%;
+    }
+    @include phones() {
+      width: 100%;
+    }
   }
   &__row {
     display: flex;
