--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -11,13 +11,26 @@
     justify-content: center;
     background-color: $grey;
     opacity: .92;
+
+    @include tablets() {
+      left: initial;
+      width: 100%;
+      align-items: center;
+      text-align: center;
+    }
   }
   &__content {
-    width: 64%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: rem(98px);
+    padding-top: rem(10px);
+
+    @include tablets() {
+      padding: 0;
+    }
   }
 }
 
@@ -37,21 +50,29 @@
     display: flex;
     height: 0;
     overflow: hidden;
+
+    @include tablets() {
+      flex-direction: column;
+      align-items: center;
+    }
   }
   &__avatar {
-    width: 28.5%;
-    height: rem(100px);
-    margin-left: rem(17px);
-    flex-shrink: 0;
-    border-radius: 50%;
-    overflow: hidden;
+    width: 30.5%;
+    text-align: center;
   }
   &__avatar-img {
     width: 100%;
     height: 100%;
+    width: rem(100px);
+  	height: rem(100px);
+  	border-radius: 50%;
   }
   &__description {
-    margin-left: rem(20px);
+    width: 50%;
+
+    @include tablets() {
+      width: 38%;
+    }
   }
 }
 
