--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -3,49 +3,96 @@
   background: url('../images/menu_bg.png') center center / cover no-repeat;
 }
 .menu-accordeon {
-  position: absolute;
-  width: 70%;
   height: 100%;
-  top: 0;
-  right: 0;
-  display: -webkit-box;
+  display: flex;
   justify-content: flex-end;
 
   &__list {
-    width: rem(240px);
-    height: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
+    height: 100%;
   }
   &__item {
+    display: flex;
     height: 100%;
+
+    @include tablets {
     width: 100%;
-    position: relative;
+    }
+    @include phones {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 10;
+    }
   }
   &__title {
-    position: absolute;
-    transform: rotate(-90deg) translateY(-50%);
-    transform-origin: 0 0;
-    top: 94%;
-    left: 50%;
-    width: max-content;
+    position: relative;
+    min-width: rem(80px);
+    display: flex;
+    height: 100%;
+    @include gagalin();
+    font-size: rem(40px);
+    color: #ffffff;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2% 1%;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(20,20,20,0.7);
+      display: block;
+    }
+      @include phones {
+        padding: 0.7% 0.5%;
+      }
   }
-  &__content {
-    width: 100%;
+  &__title_meat {
+    background: url('../images/menu_meat.png');
+  }
+  &__title_veg {
+    background: url('../images/menu_veg.png');
+  }
+  &____title_diet {
+    background: url('../images/menu_diet.png');
+  }
+  &__item_active &__title {
+    color: $yellow;
+  }
+  &__item_active &__description {
+    width: rem(540px);
+  }
+  &__title-txt {
+    position: absolute;
+    transform: rotate(-90deg);
+    transform-origin: 0 50%;
+    top: 90%;
+    left: 50%;
+    white-space: nowrap;
+  }
+  &__description {
+    width: 0;
     height: 100%;
     overflow: hidden;
     background-color: $grey;
     opacity: .92;
   }
-  &__content-text {
+  &__description-txt {
     @include ubuntu($style: light);
     width: 100%;
     height: 100%;
     color: #ffffff;
     font-size: rem(14px);
     line-height: rem(24px);
+    padding: rem(20px);
+
+    @include phones {
+        padding: 5% 3.5%;
+      }
   }
 }
 
@@ -53,10 +100,4 @@
   position: absolute;
   top: rem(95px);
   left: rem(95px);
-}
-
-.menu-accordeon__title {
-  @include gagalin();
-  font-size: rem(40px);
-  color: #ffffff;
 }
