--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -77,7 +77,7 @@
     color: #ffffff;
     font-size: rem(14px);
     line-height: rem(24px);
-    padding: rem(20px);
+    padding: rem(60px) rem(35px);
 
     @include phones {
       padding: 5% 3.5%;
