--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -41,8 +41,7 @@
   right: 0;
   bottom: 0;
   background: rgba(#000, .5);
-  padding: rem(25px);
-  padding-left: rem(15px);
+  padding: rem(30px) rem(25px) rem(35px) rem(20px);
   color: #fff;
   opacity: 0;
   transition: opacity .3s;
