--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -23,7 +23,7 @@
     width: 49%;
 
     @include tablets() {
-      width: 58%;
+      width: 65%;
     }
     @include phones() {
       width: 100%;
@@ -35,6 +35,10 @@
 
     &:last-child {
       margin-bottom: 0;
+
+      @include tablets() {
+        margin-bottom: rem(20px);
+      }
     }
   }
   &__block {
@@ -54,6 +58,10 @@
   @include ubuntu($style: light)
   font-size: rem(14px);
   color: #e2e2e2;
+
+  @include tablets() {
+    font-size: rem(16px);
+  }
 }
 
 .form__block-input {
@@ -65,6 +73,7 @@
   outline: none;
   width: 100%;
   padding: rem(9px) rem(10px);
+  margin-top: 5px;
 
   &:focus {
     width: 100%;
@@ -74,7 +83,7 @@
 }
 
 .form__block-input_comment {
-  height: rem(101px);
+  height: rem(120px);
 }
 
 .form-controlls {
