--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -30,6 +30,7 @@
 
     @include tablets() {
       padding: 0;
+      justify-content: center;
     }
   }
 }
@@ -71,7 +72,7 @@
     width: 50%;
 
     @include tablets() {
-      width: 38%;
+      width: 44%;
     }
   }
 }
@@ -87,6 +88,10 @@
   border-right-width: rem(5px);
   display: inline-block;
   margin-right: rem(9px);
+
+  @include tablets() {
+    border-bottom-width: rem(5px);
+  }
 }
 
 .team-accordeon__item_active .team-accordeon__content {
@@ -109,18 +114,31 @@
 
 .team-accordeon__title {
   @include gagalin();
+  font-size: rem(14px);
+  color: #ffffff;
+
+  @include tablets() {
+    font-size: rem(27px);
+  }
 }
 
 .team-accordeon__description-title {
   @include ubuntu($style: bold);
   margin-bottom: rem(20px);
+  font-size: rem(14px);
+  color: #ffffff;
+
+  @include tablets() {
+    font-size: rem(16px);
+  }
 }
 
 .team-accordeon__description-text {
   @include ubuntu($style: light);
-}
-
-.team-accordeon__title, .team-accordeon__description-title, .team-accordeon__description-text {
   font-size: rem(14px);
   color: #ffffff;
+
+  @include tablets() {
+    font-size: rem(16px);
+  }
 }
