--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -29,6 +29,9 @@
   @include tablets() {
     font-size: rem(72px);
   }
+  @include phones() {
+    font-size: rem(64px);
+  }
 }
 
 .hero__content-description {
@@ -43,6 +46,9 @@
     align-items: center;
     text-align: center;
   }
+  @include phones() {
+    margin-top: rem(25px);
+  }
 }
 
 .hero__content-image, .hero__content-description {
@@ -52,7 +58,7 @@
     width: 90%;
   }
   @include phones() {
-  width: initial;
+    width: 80%;
   }
 }
 
