--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -30,6 +30,9 @@
     @include tablets {
       font-size: rem(30px);
     }
+    @include phones {
+      font-size: rem(33px);
+    }
     &::before {
       content: "";
       position: absolute;
@@ -96,4 +99,16 @@
   position: absolute;
   top: rem(95px);
   left: rem(95px);
+
+  @include tablets {
+    top: rem(110px);
+    left: rem(30px);
+    margin-bottom: 0;
+  }
+  @include phones {
+    font-size: rem(62px);
+    margin-bottom: 0;
+    top: rem(60px);
+    left: rem(60px);
+  }
 }
