--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -19,7 +19,7 @@
     align-items: center;
   }
 
-  &__container {
+  &__container-left, &__container-right {
     width: 49%;
 
     @include tablets() {
@@ -27,6 +27,14 @@
     }
     @include phones() {
       width: 100%;
+    }
+  }
+  &__container-right {
+    @include phones() {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: stretch;
     }
   }
   &__row {
@@ -39,6 +47,9 @@
       @include tablets() {
         margin-bottom: rem(20px);
       }
+      // @include phones() {
+      //   margin-bottom: rem(40px);
+      // } не работает
     }
   }
   &__block {
@@ -93,6 +104,7 @@
 
   &:last-child {
     margin-bottom: rem(20px);
+    // не работает
   }
   &__radio {
     display: none;
@@ -172,4 +184,18 @@
 .form__confirm {
   display: flex;
   align-items: center;
+}
+
+.section-title_order {
+  @include phones() {
+    font-size: rem(62px);
+  }
+}
+
+.form-cntrls {
+  @include phones() {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
