--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -64,6 +64,9 @@
   @include tablets() {
     font-size: rem(16px);
   }
+  @include phones() {
+    font-size: rem(30px);
+  }
 }
 
 .reviews__text {
