--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -10,6 +10,7 @@
 
   @include phones() {
     flex-direction: column;
+    padding-bottom: 0;
   }
 }
 
@@ -50,8 +51,8 @@
     height: 6.3125rem;
   }
   @include phones() {
-    width: 8.25rem;
-    height: 7.3125rem;
+    width: 7.25rem;
+    height: 6.3125rem;
   }
 }
 
@@ -71,7 +72,7 @@
     font-size: rem(27px);
   }
   @include phones() {
-    font-size: rem(28px);
+    font-size: rem(24px);
   }
 }
 
@@ -86,7 +87,7 @@
     line-height: rem(26px);
   }
   @include phones() {
-    font-size: rem(17px);
+    font-size: rem(16px);
     line-height: rem(30px);
   }
 }
