--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -7,10 +7,10 @@
   margin-bottom: rem(50px);
 
   @include tablets() {
-    font-size: rem(82px);
+    font-size: rem(76px);
   }
   @include phones() {
-    font-size: rem(78px);
+    font-size: rem(70px);
   }
 
   &_black {
@@ -21,10 +21,18 @@
   }
   &_hero {
     margin-bottom: rem(25px);
+
+    @include tablets() {
+      white-space: nowrap;
+      margin-bottom: rem(15px);
+    }
+    @include phones() {
+      white-space: nowrap;
+    }
   }
   &_team {
     margin-bottom: rem(40px);
-    
+
     @include phones() {
       font-size: rem(62px);
       margin-bottom: rem(30px);
