--- a/docs/css/blocks/common/btn.scss
+++ b/docs/css/blocks/common/btn.scss
@@ -1,24 +1,17 @@
 .btn {
   @include ubuntu($style: medium);
 
-  padding: rem(8px) rem(15px);
+  padding: 8px 15px;
   background: $red;
   color: #fff;
   text-decoration: none;
   outline: none;
-  border-radius: rem(5px);
+  border-radius: 5px;
   border-color: transparent;
   display: inline-block;
   text-transform: uppercase;
-  font-size: rem(13px);
+  font-size: 13px;
   cursor: pointer;
-
-  @include tablets() {
-    font-size: rem(17px);
-  }
-  @include phones() {
-    font-size: rem(17px);
-  }
 
   &_background_black {
     background: $black;
