--- a/docs/css/blocks/reviews.scss
+++ b/docs/css/blocks/reviews.scss
@@ -27,11 +27,6 @@
       opacity: 1;
     }
   }
-
-  @include tablets() {
-    width: 50%;
-    height: 25%;
-  }
 }
 
 .reviews__item-hover {
@@ -41,7 +36,8 @@
   right: 0;
   bottom: 0;
   background: rgba(#000, .5);
-  padding: rem(30px) rem(25px) rem(35px) rem(20px);
+  padding: 25px;
+  padding-left: 15px;
   color: #fff;
   opacity: 0;
   transition: opacity .3s;
@@ -50,41 +46,16 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
-
-  @include tablets() {
-    align-items: center;
-    text-align: center;
-    padding-right: rem(55px);
-    padding-left: rem(55px);
-    padding-top: rem(20px);
-    padding-bottom: rem(15px);
-  }
 }
 
 .reviews__title {
   @include gagalin;
-  font-size: rem(14px);
-
-  @include tablets() {
-    font-size: rem(16px);
-  }
-  @include phones() {
-    font-size: rem(30px);
-  }
+  font-size: 14px;
 }
 
 .reviews__text {
   @include ubuntu($style: light);
-  font-size: rem(14px);
-  line-height: rem(24px);
+  font-size: 14px;
+  line-height: 24px;
   overflow: hidden;
-
-  @include tablets() {
-    font-size: rem(16px);
-    margin-top: rem(10px);
-    margin-bottom: rem(10px);
-  }
-  @include phones() {
-    display: none;
-  }
 }
