--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -44,7 +44,7 @@
   flex-flow: column nowrap;
 
   @include tablets() {
-    margin-top: rem(15px);
+    margin-top: 0;
     margin-left: 0;
     flex-direction: column;
     align-items: center;
@@ -59,9 +59,6 @@
 .hero__content-image, .hero__content-description {
   width: 50%;
 
-  @include tablets() {
-    width: 60%;
-  }
   @include phones() {
     width: 80%;
   }
