--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -14,7 +14,9 @@
   &__item {
     display: flex;
     height: 100%;
-    cursor: pointer;
+  }
+  &__item &__description-close {
+    display: none;
   }
   &__item_active {
     @include phones {
@@ -35,6 +37,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    cursor: pointer;
 
     &::before {
       content: "";
@@ -116,6 +119,7 @@
   background-color: transparent;
   border: none;
   display: none;
+  cursor: pointer;
 
   @include phones() {
     display: block;
