--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -19,6 +19,11 @@
   &_white {
     color: #ffffff;
   }
+  &_best {
+    @include phones() {
+      font-size: rem(62px);
+    }
+  }
   &_hero {
     margin-bottom: rem(25px);
 
@@ -28,6 +33,7 @@
     }
     @include phones() {
       white-space: nowrap;
+      margin: 0;
     }
   }
   &_team {
