--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -20,6 +20,9 @@
     color: #ffffff;
   }
   &_best {
+    @include tablets() {
+      font-size: rem(82px);
+    }
     @include phones() {
       font-size: rem(62px);
     }
@@ -29,9 +32,10 @@
 
     @include tablets() {
       white-space: nowrap;
-      margin-bottom: rem(15px);
-    }
+      font-size: rem(82px);
+}
     @include phones() {
+      font-size: rem(72px);
       white-space: nowrap;
       margin: 0;
     }
@@ -39,6 +43,10 @@
   &_team {
     margin-bottom: rem(40px);
 
+    @include tablets() {
+      font-size: rem(82px);
+      margin-bottom: rem(45px);
+    }
     @include phones() {
       font-size: rem(58px);
       margin-bottom: rem(30px);
@@ -53,6 +61,7 @@
       top: rem(110px);
       left: rem(30px);
       margin-bottom: 0;
+      font-size: rem(82px);
     }
     @include phones {
       font-size: rem(56px);
