--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -39,6 +39,10 @@
     background-size: cover;
     cursor: pointer;
 
+    @include tablets() {
+      min-width: 5.7rem;
+    }
+
     &::before {
       content: "";
       position: absolute;
@@ -73,6 +77,11 @@
     top: 89.5%;
     left: 49%;
     white-space: nowrap;
+
+    @include tablets() {
+      top: 91%;
+      font-size: rem(45px);
+    }
   }
   &__description {
     width: 0;
@@ -89,6 +98,13 @@
     }
     @include phones {
       width: 100%;
+    }
+  }
+  &__item_active &__description-close {
+    display: none;
+
+    @include phones() {
+      display: block;
     }
   }
   &__description-txt {
@@ -109,10 +125,10 @@
 // close btn
 .menu-accordeon__description-close {
   position: absolute;
-  right: 10px;
-  top: 15px;
-  width: 32px;
-  height: 32px;
+  right: rem(10px);
+  top: rem(15px);
+  width: rem(32px);
+  height: rem(32px);
   opacity: 0.5;
   text-decoration: none;
   outline: none;
@@ -120,26 +136,26 @@
   border: none;
   display: none;
   cursor: pointer;
-
-  @include phones() {
-    display: block;
-  }
 }
+
 .menu-accordeon__description-close:hover {
   opacity: 1;
 }
+
 .menu-accordeon__description-close:before, .menu-accordeon__description-close:after {
   position: absolute;
-  left: 15px;
+  left: rem(15px);
   content: '';
-  height: 20px;
-  width: 4px;
+  height: rem(20px);
+  width: rem(4px);
   background-color: #ffffff;
   border-radius: 25%;
 }
+
 .menu-accordeon__description-close:before {
   transform: rotate(45deg);
 }
+
 .menu-accordeon__description-close:after {
   transform: rotate(-45deg);
 }
