--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -45,6 +45,10 @@
     }
   &__item_active {
     padding-bottom: rem(34px);
+
+    @include tablets(){
+      padding-bottom: 2rem;
+    }
   }
   &__content {
     display: flex;
@@ -62,7 +66,7 @@
     text-align: center;
 
     @include tablets() {
-      margin-bottom: rem(17px);
+      margin-bottom: 0.9rem;
     }
     @include phones() {
       margin-bottom: rem(17px);
